{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 76,
  "lineage": "73c831fe-8877-b518-f95b-85879df98c73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-rds-internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:internet-gateway/igw-0c337dd3fd85b010b",
            "id": "igw-0c337dd3fd85b010b",
            "owner_id": "865113568816",
            "tags": {
              "Name": "dev-rds-internetgateway"
            },
            "tags_all": {
              "Name": "dev-rds-internetgateway"
            },
            "vpc_id": "vpc-0fe8828ed479e99dd"
          },
          "dependencies": [
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev-rds-routetable-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c337dd3fd85b010b",
            "id": "r-rtb-06184ca9a8fcd61e61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06184ca9a8fcd61e6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-rds-internetgateway",
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-rds-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:security-group/sg-070f012836e857512",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070f012836e857512",
            "ingress": [
              {
                "cidr_blocks": [
                  "58.84.62.96/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-rds-securitygroup",
            "name_prefix": "",
            "owner_id": "865113568816",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe8828ed479e99dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-rds-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:subnet/subnet-0572de4c06afce9d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.50.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572de4c06afce9d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865113568816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-rds-subnet1"
            },
            "tags_all": {
              "Name": "dev-rds-subnet1"
            },
            "vpc_id": "vpc-0fe8828ed479e99dd"
          },
          "dependencies": [
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-rds-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:subnet/subnet-0362a9cf1cfde57b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.50.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0362a9cf1cfde57b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "865113568816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-rds-subnet2"
            },
            "tags_all": {
              "Name": "dev-rds-subnet2"
            },
            "vpc_id": "vpc-0fe8828ed479e99dd"
          },
          "dependencies": [
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-rds-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:vpc/vpc-0fe8828ed479e99dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-04dee72607a369124",
            "default_route_table_id": "rtb-06184ca9a8fcd61e6",
            "default_security_group_id": "sg-03cae7d7c472c93fa",
            "dhcp_options_id": "dopt-0af2a737e9de79f33",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe8828ed479e99dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06184ca9a8fcd61e6",
            "owner_id": "865113568816",
            "tags": {
              "Name": "dev-rds-vpc"
            },
            "tags_all": {
              "Name": "dev-rds-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "dev-rds-securitygroup_egressrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:security-group-rule/sgr-0c300c151a0abb101",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c300c151a0abb101",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-070f012836e857512",
            "security_group_rule_id": "sgr-0c300c151a0abb101",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dev-rds-securitygroup",
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "dev-rds-securitygroup_ingressrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:865113568816:security-group-rule/sgr-03ee38a867c69e058",
            "cidr_ipv4": "58.84.60.14/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-03ee38a867c69e058",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-070f012836e857512",
            "security_group_rule_id": "sgr-03ee38a867c69e058",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dev-rds-securitygroup",
            "aws_vpc.dev-rds-vpc"
          ]
        }
      ]
    }
  ]
}